# synthmind

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  build_backend.py  main.py  providers_config.json  pyproject.toml  requirements.txt  skills_index.json
backend/.agents/code-reviewer/: AGENT.md
backend/.agents/data-cruncher/: AGENT.md
backend/.agents/web-researcher/: AGENT.md
backend/.config/: sandbox.json  todos.json
backend/.config/threads/: 69ddceeb5802.json
backend/.skills/system-info/: SKILL.md
backend/agent/: config.py  core.py  hitl.py  llm.py  schemas.py  skills.py  tools.py
backend/api/: agents_api.py  approve.py  balance.py  chat.py  chat_stream.py  configs.py  files.py  git.py  memory.py  models.py  sandbox.py  server.py  skills_api.py  threads.py  time_travel.py  todos.py  tracing.py  whitelist.py
backend/bot/: base.py  feishu.py
backend/core/: agent.py  llm.py  memory.py  state.py
backend/core/providers/: __init__.py  anthropic.py  deepseek.py  ollama.py  openai.py
backend/core/tools/: __init__.py  calculator.py  delegate_tool.py  file_ops.py  memory_tools.py  sandbox_tools.py  time_tool.py  todo_tools.py  web_search.py
backend/scripts/: migrate.py
backend/services/: balance.py  checkpointer.py  feishu_config.py  git_service.py  hitl.py  provider_config.py  skills.py  subagents.py  threads.py  todos.py  tracing.py  whitelist.py
backend/skills/web-summarizer/: SKILL.md
frontend/: index.html  (+4 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: synthmind-backend-x86_64-apple-darwin
(+42 files in other folders)
