[project]
name = "synthmind-backend"
version = "0.1.0"
description = "SynthMind - Multi-LLM Agent Platform Backend"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"
